# Fluid-Simulation

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  README.md  README.txt  compile_how_to.md
code/: ConjGradMatrix.cpp  ScenePresets.cpp  SolidObject.cpp  demo.c  demo.cpp  linearSolver.cpp  solver.c  solver.cpp
code/SolidObjects/: RectangleObstacle.cpp  SolidBoundary.cpp  SolidCircle.cpp  SolidRectangle.cpp
include/: ConjGradMatrix.h  Object.h  ScenePresets.h  SolidObject.h  jet_colormap.h  linearSolver.h  viridis_colormap.h
include/SolidObjects/: RectangleObstacle.h  SolidBoundary.h  SolidCircle.h  SolidRectangle.h
